# hgl

./: .gitignore  CLAUDE.md  dldata.py  lt.py  main.py  new_main.py  pyproject.toml  run.sh  run_train.py  test_attention.py  test_model.py  train_ddp.py  train_ddp_v2.py
